--- a/assets/src/css/btc-paywall-admin.css
+++ b/assets/src/css/btc-paywall-admin.css
@@ -862,3 +862,9 @@ Gateway
     transform: rotate(360deg);
   }
 }
+
+/*CoinchargePay wizzard*/
+
+#btcpw_coincharge_pay_form fieldset:not(:first-of-type) {
+  display: none;
+}
